some bug fxing feb end